--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,7 +54,7 @@ body {
 
 .user-list {
   background: #2D3843;
-padding:.5em;
+  padding:.5em;
   margin: 0 0 0 5%;
   font-family: 'Rubik', sans-serif;
   width: 15%;
@@ -65,20 +65,23 @@ padding:.5em;
   background: rgb(255, 255, 255);
   border-left: 40px solid rgb(190, 180, 180);
   border-right: 40px solid rgb(190, 180, 180);
-  padding:1em;
-
+  padding: 1em;
 
   width: 80%;
 }
 
 #chat-logo{
-  position: absolute;
-  font-size: 150px;
-  color: rgba(0,0,0,0.2);
   font-family: 'Lobster', cursive;
-  top: 45%;
-  left:40%;
-  
+
+  position: absolute;
+
+  font-size: 150px;
+
+  color: #D3D3D3;
+
+  user-select: none;
+
+  z-index: 1;
 }
 
 .channel, .user {
@@ -86,24 +89,35 @@ padding:.5em;
 
   display: flex;
   justify-content: center;
-  
+
+  user-select: none;
+}
+
+.user:hover {
+  background: #3E4954;
 }
 
 .message {
   padding: 5px;
   margin: 10px;
+
   padding:.7em;
   border-radius: 20px;
   display: flex;
   width:fit-content;
   background-color: aqua;
+
+  z-index: 2;
 }
 
 .message-owner{
   font-family: 'Rubik', sans-serif;
 
+  user-select: none;
 }
 
 .message-content{
   font-family: 'Josefin Slab', serif;
+
+  user-select: none;
 }
