--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,7 +62,10 @@ body {
 .chat-box {
   width: 80vw;
 }
-
+.chat-box {
+  display: flex;
+  flex-direction: column;
+}
 .chat {
   background: rgb(255, 255, 255);
   border-left: 40px solid rgb(190, 180, 180);
