--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,3 @@
-
-
 body {
   overflow: hidden;
 }
@@ -11,7 +9,7 @@ body {
   width: 100vw;
 }
 
-.channel-list, .user-list, .chat {
+.channel-tray, .user-list, .chat-box {
   overflow-y: scroll;
 
   height: 100%;
@@ -20,7 +18,7 @@ body {
   flex-direction: column;
 }
 
-.channel-list {
+.channel-tray {
   background: rgb(16, 101, 141);
   position: fixed;
   border-right: 5px solid rgb(121, 179, 218);
@@ -30,7 +28,7 @@ body {
   animation: channelListSlideIn 0.1s linear forwards;
 }
 
-.channel-list:hover {
+.channel-tray:hover {
   animation: channelListSlideOut 0.1s linear forwards;
 }
 
@@ -58,7 +56,11 @@ body {
   margin: 0 0 0 5%;
   font-family: 'Rubik', sans-serif;
   width: 15%;
-  color:white;
+  color: #FFFFFF;
+}
+
+.chat-box {
+  width: 80vw;
 }
 
 .chat {
@@ -67,7 +69,10 @@ body {
   border-right: 40px solid rgb(190, 180, 180);
   padding: 1em;
 
-  width: 80%;
+  box-sizing: border-box;
+
+  height: 100%;
+  width: 100%;
 }
 
 #chat-logo{
@@ -104,7 +109,7 @@ body {
   padding:.7em;
   border-radius: 20px;
   display: flex;
-  width:fit-content;
+  width: fit-content;
   background-color: aqua;
 
   z-index: 2;
@@ -120,4 +125,14 @@ body {
   font-family: 'Josefin Slab', serif;
 
   user-select: none;
+}
+
+.message-box form {
+  display: flex;
+}
+
+.message-box form input {
+  flex: 1;
+  font-size: 14px;
+  height: 20px;
 }
