--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@ body{
 
 .logo{
   font-family: Lobster;
-  font-size: 120px;
+  font-size: 40px;
   color:#ffffff;
   
 }
@@ -20,10 +20,18 @@ body{
 .chat{
   display:flex;
   flex-direction: row;
+  width: 100vw;
+  margin:2em;
+  align-content: space-between;
 }
 
-.channel-tray, .chat-box{
+.channel-tray{
   display: flex;
   flex-direction: column;
+  margin-left:2em;
 }
 
+.chat-box{
+  display: flex;
+  flex-direction: column; 
+}
