--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,17 +21,54 @@ body{
   display:flex;
   flex-direction: row;
   width: 100vw;
-  margin:2em;
-  align-content: space-between;
+  overflow: hidden;
+ 
+  
 }
 
 .channel-tray{
   display: flex;
   flex-direction: column;
-  margin-left:2em;
+  background-color: #17174e;
+  height:100vh;
+  padding:2em;
+}
+
+.channel-list{
+  overflow-y: scroll;
+  height:80vh;
 }
 
 .chat-box{
   display: flex;
   flex-direction: column; 
+  background-color:#ffffff;
+  width:100vw;
+  height:100vh;
+}
+
+.chat-window{
+  overflow-y: scroll;
+  padding-left: 2em;
+  padding-bottom: 1em;
+}
+
+.chat-form {
+  width:100vw;
+  margin-bottom:5px;
+}
+
+#messageBoxInput{
+  width:79vw;
+}
+
+.message{
+  background-color: #17174e;
+  margin:10px;
+  color:white;
+  padding:.6em;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  width: fit-content;
 }
