--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,14 @@ body{
   flex-direction: column;
   align-items: center;
 }
+.home{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+.list-group-item:hover{
+  cursor: pointer;
+}
 
 .logo{
   font-family: Lobster;
@@ -29,14 +37,23 @@ body{
 .channel-tray{
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   background-color: #17174e;
   height:100vh;
   padding:2em;
+  width:300px;
 }
 
 .channel-list{
   overflow-y: scroll;
   height:80vh;
+}
+
+.channel-list::-webkit-scrollbar{
+  display:none;
+}
+.channel-form{
+
 }
 
 .chat-box{
@@ -51,19 +68,22 @@ body{
   overflow-y: scroll;
   padding-left: 2em;
   padding-bottom: 1em;
+  height:100vh;
 }
 
 .chat-form {
-  width:100vw;
-  margin-bottom:5px;
+  position: absolute;
+  
+  bottom: 0;
+  
 }
 
 #messageBoxInput{
-  width:79vw;
+  width:74vw;
 }
 
 .message{
-  background-color: #17174e;
+  background-color: #565685;
   margin:10px;
   color:white;
   padding:.6em;
@@ -71,4 +91,8 @@ body{
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   width: fit-content;
+}
+
+.chat-message{
+  font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
 }
