--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 
 
 body{
-  background-color: #6868d1;
+  background-color: #17174e;
 }
 
 .App{
@@ -12,7 +12,10 @@ body{
 .home{
   display:flex;
   flex-direction: column;
-  align-items: center;
+  align-items:center;
+  justify-content: center;
+  align-content: center;
+  height:100vh;
 }
 .list-group-item:hover{
   cursor: pointer;
@@ -20,8 +23,16 @@ body{
 
 .logo{
   font-family: Lobster;
-  font-size: 40px;
+  font-size: 130px;
   color:#ffffff;
+  
+}
+
+.logo-chatroom{
+  font-family: Lobster;
+  font-size: 50px;
+  color:#ffffff;
+  text-align: center;
   
 }
 
@@ -46,15 +57,16 @@ body{
 
 .channel-list{
   overflow-y: scroll;
-  height:80vh;
+  
+  height:50vh;
 }
-
+.form-control{
+  font-size:13px;
+}
 .channel-list::-webkit-scrollbar{
   display:none;
 }
-.channel-form{
 
-}
 
 .chat-box{
   display: flex;
