chat looks good

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,8 +79,12 @@ body{
 }
 
 .chat-window{
+  display:flex;
+  flex-direction:column;
+  justify-content: flex-start;
   overflow-y: scroll;
-  padding-left: 2em;
+  padding-left: 1em;
+  padding-top:1em;
   padding-bottom: 1em;
   height:100vh;
 }
@@ -93,18 +97,22 @@ body{
 
 .message{
   background-color: #565685;
-  margin:10px;
+  margin:.5em;
   color:white;
   padding:.6em;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-radius:10px;
   width: fit-content;
+  font-family: futura;
+  font-size: 15px;
 }
 
 .chat-message{
-  font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
+.date{
+  color:#686161;
+}
+
 
 /* ============================================================================= */
 /* phones */
@@ -159,7 +167,7 @@ body{
       margin:1em;
     }
     .channel-list{
-      width:30vw;
+      width:25vw;
       border:0;
     }
 }
