--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,3 @@
-
-
 body{
   background-color: #17174e;
 }
@@ -61,6 +59,11 @@ body{
   
 }
 
+.logo-chatroom:hover {
+  text-decoration: none;
+  color: white;
+}
+
 .chat{
   display:-webkit-box;
   display:-ms-flexbox;
@@ -97,8 +100,15 @@ body{
   height:50vh;
 }
 .form-control{
-  font-size:13px;
+  font-size:15px;
+  border-radius: 0%;
 }
+
+.chat:focus {
+  border: 2px solid #565685;
+  background-color: rgba(0, 0, 0, 0.048);
+}
+
 .channel-list::-webkit-scrollbar{
   display:none;
 }
